<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
<modelVersion>4.0.0</modelVersion>
<groupId>CompSci307_2021Fall</groupId>
<artifactId>lab_reflection</artifactId>
<version>master-SNAPSHOT</version>
<packaging>jar</packaging>

<properties>
    <project.build.sourceEncoding>iso-8859-1</project.build.sourceEncoding>
</properties>

<build>
    <!-- use simple names for folders instead of maven's prerferred ones -->
    <sourceDirectory>src</sourceDirectory>
    <resources>
        <!-- external data files -->
        <resource>
            <directory>data</directory>
        </resource>
        <!-- internal resource files also need to be included, but not directly -->
        <resource>
            <directory>src</directory>
        </resource>
    </resources>
    <plugins>
        <!-- compiles project source code using correct version and flags -->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.1</version>
            <configuration>
                <encoding>iso-8859-1</encoding>
                <includes>
                    <include>src/**/*.java</include>
                </includes>
                <source>16</source>
                <target>16</target>
                <compilerArgs>
                    <arg>--enable-preview</arg>
                </compilerArgs>
            </configuration>
        </plugin>
    </plugins>
</build>
</project>
